[package]
name = "engiffen"
version = "0.1.0"
authors = ["Jesse Bees <jesse@toomanybees.com>"]
description = """
Encodes GIF images from sequences of images. Includes an installable
command line bin as well as the library.
"""
homepage = "https://github.com/TooManyBees/engiffen"
repository = "https://github.com/TooManyBees/engiffen"
readme = "README.md"
keywords = ["gif", "stream", "image", "cli"]
categories = ["multimedia", "command-line-utilities"]
license = "MIT"
publish = false

exclude = [
  "tests/*"
]

[dependencies]
image = "~0.13"
gif = "~0.9"
color_quant = "~1.0.0"
getopts = "0.2.14"

[lib]
name = "engiffen"
path = "src/lib.rs"

[[bin]]
name = "engiffen"
path = "src/main.rs"
doc = false
